api: support legacy API for existing setups
